--- a/manifestFF.json
+++ b/manifestFF.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "__MSG_extName__",
-  "version": "0.9.6",
+  "version": "0.9.5",
   "description": "__MSG_extDesc__",
   "default_locale": "en",
   "icons": {
@@ -14,9 +14,15 @@
     "default_title": "__MSG_extName__"
   },
   "background": {
-     "service_worker": "background.js" 
+     "service_worker": "background.js",
+	  "scripts":["background.js"]
   },
   "content_scripts": [  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{b2dbb4cf-7425-4790-8bc4-b1ccbc818118}"
+    }
+  },
   "content_security_policy": {
 	  "extension_pages": "script-src 'self'; object-src 'self'"
   },
